--- a/gb/14/5/28/n4165588.md
+++ b/gb/14/5/28/n4165588.md
@@ -1,59 +1,53 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/havifh3963/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/havifh3963/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/havifh3963/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/havifh3963/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>纽实施限贷令后 低首付贷款上月首次回升</h2>
 
 <h6></h6>
 <hr>
-	<p>【大纪元2014年05月28日讯】（大纪元记者韩香茗编译报导）根据央行5月26日（本周一）发布的数据，今年4月，在各银行的新发住<ahref="https://github.com/havifh3963/djy/blob/master/gb/tag/%E6%88%BF.md#1">房</a>贷款中，首付低于房价20%的贷款比例约占4.3％，比3月份的3.6％略有上升。这是自去年10月实施限贷令以来，该数据首次增长。</p>
-<p>数据显示，各银行4月份新增抵押贷款总值为46.7亿纽币。其中， LVR（贷款与<ahref="https://github.com/havifh3963/djy/blob/master/gb/tag/%E6%88%BF.md#1">房</a>价比例）超过80%的贷款为2.53亿，另有5,400万贷款享有央行的豁免权（Welcome Home Loan计划）。如果不包括符合豁免规定的贷款，高LVR抵押贷款比例占新增贷款的5.4％，相比3月份的4.8％，略有提高。</p>
+	<p>【大纪元2014年05月28日讯】（大纪元记者韩香茗编译报导）根据央行5月26日（本周一）发布的数据，今年4月，在各银行的新发住<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%88%BF.md#1">房</a>贷款中，首付低于房价20%的贷款比例约占4.3％，比3月份的3.6％略有上升。这是自去年10月实施限贷令以来，该数据首次增长。</p>
+<p>数据显示，各银行4月份新增抵押贷款总值为46.7亿纽币。其中， LVR（贷款与<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%88%BF.md#1">房</a>价比例）超过80%的贷款为2.53亿，另有5,400万贷款享有央行的豁免权（Welcome Home Loan计划）。如果不包括符合豁免规定的贷款，高LVR抵押贷款比例占新增贷款的5.4％，相比3月份的4.8％，略有提高。</p>
 <p>本月初，央行表示，对低首付住房贷款所施行的限贷令已经遏制了奥克兰和基督城房价飙升所带来的潜在风险，因此低端房市销量下降了11％。央行估计，房价通胀已缓解2.5%左右。央行希望房屋销量继续下降3％～8％。</p>
 <p>各银行表示，央行的限贷令要求各银行将首付低于房价20%的贷款限制在新增贷款的10％以内。最初潜在买家误以为自己首付太低，银行会拒绝为他们发放贷款，因此该类购房者数量明显下降。而去年10月份，在限贷令刚刚实施的时候，该数字的比例为11.5％。尽管央行新近再次加息，但近来该类贷款却呈上升趋势。</p>
 <p>Kiwibank银行发言人Bruce Thompson表示，由於潜在买家反应过度，不敢申请贷款买房，导致该类贷款数量一度明显下降，但现在看来已开始回升。</p>
 <p>Thompson表示，有些人不了解政府支持的Welcome Home Loan计划。该计划是专为首次购房者制定的与收入相关的计划，不受限贷令的限制。他说，该计划允许购房者以很低的首付购房，甚至可能低于5％。该项计划在省级的各区域均执行效果很好。</p>
 <p>BNZ银行发言人Thor Bostelmann表示，自限贷令实施以来，所有银行对LVR高于80%贷款的发放率均在5%～7％之间。 与限贷令出台前相比，发放比例明显降低。同时，我们也看到整个银行业住房贷款业务的提升和增长，贷款客户们也因此全方位受益，包括现金返还优惠和市场主导利率。”</p>
-<p>他说，限贷令的实施造成各银行间的竞争，为吸引和留住贷款客户，各银行纷纷出台各种优惠政策，其中之一是3,000纽币的现金返还优惠。<br />去年10月，央行开始实施限贷令，目的是使不断上涨的<ahref="https://github.com/havifh3963/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>房市，特别是奥克兰和基督城火热的房市降温，同时避免再次加息，因为此前的加息很可能已经助长了对已经增值的纽币的需求。因此，央行采取了紧缩政策，将官方贴现率(Official Cash Rate)提高两次，至3％。<br />央行表示，除非有信心看到住房市场对利率的上调有所反应，否则年底前不会取消限贷令。央行希望通过利率上调，能够看到比本世纪最初10年中市场繁荣时期更高的认可度，当时的贷款大多为浮动利率或1年期以下的定期利率。</p>
+<p>他说，限贷令的实施造成各银行间的竞争，为吸引和留住贷款客户，各银行纷纷出台各种优惠政策，其中之一是3,000纽币的现金返还优惠。<br />去年10月，央行开始实施限贷令，目的是使不断上涨的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>房市，特别是奥克兰和基督城火热的房市降温，同时避免再次加息，因为此前的加息很可能已经助长了对已经增值的纽币的需求。因此，央行采取了紧缩政策，将官方贴现率(Official Cash Rate)提高两次，至3％。<br />央行表示，除非有信心看到住房市场对利率的上调有所反应，否则年底前不会取消限贷令。央行希望通过利率上调，能够看到比本世纪最初10年中市场繁荣时期更高的认可度，当时的贷款大多为浮动利率或1年期以下的定期利率。</p>
 <p>（责任编辑：易凡）</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/14/4/15/n4132139.md#1">纽三月房价创历史最高记录</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/14/4/23/n4138622.md#1">中国资金买房问题或成纽大选焦点</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/14/4/29/n4143013.md#1">纽商用物业发展强劲 市场空前高涨</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/14/5/6/n4148392.md#1">奥克兰4月份房市下跌  长假是主因</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/4/15/n4132139.md#1">纽三月房价创历史最高记录</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/4/23/n4138622.md#1">中国资金买房问题或成纽大选焦点</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/4/29/n4143013.md#1">纽商用物业发展强劲 市场空前高涨</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/5/6/n4148392.md#1">奥克兰4月份房市下跌  长假是主因</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/14/n10144729.md#1" target="_blank">林辉：支持缅共的知青旅往事并不如烟</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/9/12/n9623688.md#1" target="_blank">比利时母亲30年车祸创痛 读转法轮4个月消失</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/24/n11543039.md#1" target="_blank">颜智华：中国特大饥荒60周年祭（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/10/21/n4555059.md#1" target="_blank">94岁老人：没有法轮功我早就不在人世了</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/3/n13553506.md#1">【未解之谜】梅辛传之三：希特勒的预言</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/17/n13582748.md#1">【奇事】这一种算命术连皇帝都大为惊奇</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/14/n13574787.md#1">古代修炼文化留给人的启示</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/25/n13605539.md#1">【财商天下】俄入侵乌克兰 北京被拉下水？</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/25/n13605772.md#1">【新闻看点】认定铁链女是小花梅 中共撤拐卖文书</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/26/n13606937.md#1">【马克时空】乌克兰抗俄 刺针、标枪、NLAW导弹立战功</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/25/n13605758.md#1">应对俄乌开战 北约反应部队启动 史上首次</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13602624.md#1">【更新2.24】美确信普京欲推翻乌现政权</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/25/n13605706.md#1">陈婷宣布取消“张艺谋妻子”微博头衔 引猜测</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13602961.md#1">产后10天俄乌开战 瑞莎焦虑乌克兰亲人全失联</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13603338.md#1">酒店隔离与好友成邻居 舒淇：巧到不能再巧</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/25/n13604262.md#1">西恩潘“人在乌克兰” 挺进战地拍入侵纪录片</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13602100.md#1">世界各地的长寿人群都吃些什么食物？</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/19/n13589665.md#1">“回春操”只要2动作！防老化 让身体变年轻</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13602266.md#1">【健康1+1】感染Omicron自救方法</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/18/n13586671.md#1">不吃早餐糖尿病风险增40％ 3组早餐养胃强身</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11955384.md#1">北京昆明湖罕见涨潮 传上次涨潮后毛泽东去世</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959031.md#1">传习近平亲自下令严办任志强 红二代分裂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/havifh3963/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/havifh3963/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/5/28/n4165588.htm">纽实施限贷令后 低首付贷款上月首次回升</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/5/28/n4165588.htm">纽实施限贷令后 低首付贷款上月首次回升</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/havifh3963/djy/blob/master/gb/14/5/28/n4165588.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/havifh3963/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/havifh3963/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/havifh3963/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/14/5/28/n4165588.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
